--- a/day-05/flexbox.html
+++ b/day-05/flexbox.html
@@ -1,6 +1,18 @@
-<div class="row">
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Flexbox Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/css/flex.css">
+</head>
+<body>
+  <div class="row">
     <div class="column">column ONE content</div>
     <div class="column">column TWO content</div>
     <div class="column">column THREE content</div>
     <div class="column">column FOUR content</div>
   </div>
+</body>
+</html>
