--- a/day-03/index.html
+++ b/day-03/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" media="screen" href="css/style.css">
 
 	<!-- add your google fonts (https://fonts.google.com) here -->
-
+	<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 	<!-- Font Awesome link -->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
